--- a/app/views/claim_issues/_form.html.erb
+++ b/app/views/claim_issues/_form.html.erb
@@ -50,29 +50,33 @@
                         <th class="th_issues_status">Status<span class="required">*</span></th>
                         <th class="th_issues_notes">Notes<span class="required">*</span></th>
                         <th class="th_issues_assign_to">Assign To<span class="required">*</span></th>
+                        <th class="th_issues_delete">Delete</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="sm">
-                        <td><input type="text" name="description" class="form-control input_pad" id="" placeholder="Title" required="true"></td>
+                        <td><input type="text" name="description[]" class="form-control input_pad" id="" placeholder="Title" required="true"></td>
                         <td>
-                            <%= select_tag "contact_id", options_for_select(@contacts.map { |obj| [obj['name'], obj['id']] }),  prompt: "select",class: "claim_contact drop_val", required: true %>
+                            <%= select_tag "contact_id[]", options_for_select(@contacts.map { |obj| [obj['name'], obj['id']] }),  prompt: "select",class: "claim_contact contacts", required: true %>
                         </td>
-                        <td><input name="cut_off_date" class="form-control" type="date" value="" id="example-date-input" required="true" placeholder="By Cut-Off Date"></td>
-                        <td><select name="status" required="true">
+                        <td><input name="cut_off_date[]" class="form-control" type="date" value="" id="example-date-input" required="true" placeholder="By Cut-Off Date"></td>
+                        <td><select name="status[]" required="true">
                                 <option value="" selected disabled>Please select</option>
                                 <option value="Open">Open</option>
                                 <option value="Closed">Closed</option>
                                 <option value="Re-open">Re-open</option>
                             </select></td>
-                        <td><textarea name="notes" class="form-control" required="true" rows="4"></textarea></td>
+                        <td><textarea name="notes[]" class="form-control" required="true" rows="4"></textarea></td>
                         <td>
-                            <%= select_tag "user_id", options_for_select(@users.map { |obj| [obj['user_name'], obj['id']] }),  prompt: "select",class: "nagammai_users drop_val", required: true %>
+                            <%= select_tag "user_id[]", options_for_select(@users.map { |obj| [obj['user_name'], obj['id']] }),  prompt: "select",class: "nagammai_users users", required: true %>
                         </td>
                     </tr>
                 </tbody>
              </table>
             </div>
+            <a id="add-spec" class="btn btn-link add-btn">
+                <i class="fa fa-plus" aria-hidden="true"></i> Add Issue
+            </a>
         </div>
         <div class="col-md-12 contacts">
             <div class="table_bg table_mrgn">
@@ -208,29 +212,6 @@
             </div>
         </div>
       
-        <div class="col-md-12">
-          <div class="card card_padding_inner">
-            <a id="add-spec" class="btn btn-link add-btn">
-            </a>          
-            <script>
-              $(document).on('click', '#add-spec', function (e) {
-                var data = $('table.spec-table tbody tr.sm .drop_val').html();
-                var html = '<tr>';
-                html += '<td><input type="text" name="description[]" class="form-control input_pad" id="" placeholder="Description" required="true"></td>';
-                html += '<td><select name="contact_id[]" class="vall" >'+data+'</select></td>';
-                html += '<td><input name="cut_off_date[]" class="form-control" type="date" value="" id="example-date-input" placeholder="By Cut-Off Date" required="true"></td>';
-                html += '<td><select name="status[]"><option value="" selected disabled>Please select</option><option value="Open">Open</option><option value="Closed">Closed</option><option value="Re-open">Re-open</option></select></td>';
-                html += '<td><textarea name="notes[]" class="form-control" style="font-size: initial;" rows="4"></textarea></td>';
-                html += '<td class="text-center"><input type="hidden" name="spec_delete[]" value="" /><span style="cursor: pointer;" class="remove-spec"><i class="fa fa-minus" aria-hidden="true"></i></span></td>';
-                html += '</tr>';
-                $('table.spec-table tbody').append(html);
-              });
-              $(document).on('click', '.remove-spec', function (e) {
-                $(this).closest('tr').remove();
-              });
-            </script> 
-          </div>
-        </div>
         <footer class="table-footer">
           <%= f.submit "Create issue" , class: "btn btn-one", id: "app1"%>
           <%= link_to "Cancel", claim_issues_path, class: "btn btn-primary", id: "app2" %>
@@ -309,7 +290,24 @@
        $(this).attr("placeholder", "dd-mm-yy");
     }
     });
-      
   });  
 </script>
-
+<script type="text/javascript">
+     $(document).on('click', '#add-spec', function(e) {
+        var contacts = $('table.spec-table tbody tr.sm .contacts').html();
+        var users = $('table.spec-table tbody tr.sm .users').html();
+        var html = '<tr>';
+        html += '<td><input type="text" name="description[]" class="form-control input_pad" id="" placeholder="Title" required="true"></td>';
+        html += '<td><select name="contact_id[]" class="vall" >' + contacts + '</select></td>';
+        html += '<td><input name="cut_off_date[]" class="form-control" type="date" value="" id="example-date-input" placeholder="By Cut-Off Date" required="true"></td>';
+        html += '<td><select name="status[]"><option value="" selected disabled>Please select</option><option value="Open">Open</option><option value="Closed">Closed</option><option value="Re-open">Re-open</option></select></td>';
+        html += '<td><textarea name="notes[]" class="form-control" style="font-size: initial;" rows="4"></textarea></td>';
+        html += '<td><select name="user_id[]" class="vall" >' + users + '</select></td>';
+        html += '<td class="text-center"><input type="hidden" name="spec_delete[]" value="" /><span style="cursor: pointer;" class="remove-spec"><i class="fa fa-minus" aria-hidden="true"></i></span></td>';
+        html += '</tr>';
+        $('table.spec-table tbody').append(html);
+    });
+    $(document).on('click', '.remove-spec', function(e) {
+        $(this).closest('tr').remove();
+    });
+</script>
