--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -9,7 +9,7 @@
             </ol>
             <h3>Manufacturers</h3>
           </header>
-          <a href="manufacturers/new" class="btn_add load" data-toggle="tooltip" title="Add Contacts"><i class="fa fa-plus" aria-hidden="true"></i></a>          
+          <!-- <a href="manufacturers/new" class="btn_add load" data-toggle="tooltip" title="Add Contacts"><i class="fa fa-plus" aria-hidden="true"></i></a>  -->         
           <div class="manufacturer">
               <table id="example" class="table table_front table-striped table-list-search">
                 <thead>
