--- a/app/views/claim_issues/index.html.erb
+++ b/app/views/claim_issues/index.html.erb
@@ -246,7 +246,7 @@
                 }
               }
           ],
-             "order": [[ 2, "asc" ]]
+             "order": [[ 2, "desc" ]]
           } );
   } );
 
